--- a/templates/predict.html
+++ b/templates/predict.html
@@ -17,7 +17,7 @@
 
 
     <div class="content">
-        <div class="user-details">
+        <!-- <div class="user-details">
           <div class="input-box">
             <span class="details"> [GRE_Score, TOEFL_Score, University_Rating, SOP, LOR, CGPA, Research] </span>
           </div>
@@ -27,7 +27,7 @@
           <div class="input-box">
             <span class="details"> {{ data }} </span>
           </div>
-        </div>
+        </div> -->
 
         <div class="user-details">
           <div class="input-box">
